# proxmark3

client/: Makefile  Makefile.in  cmdhfmfhard.c  configure.ac  hfmfhard.c  hfmfhard.h  ui.c  ui.h
client/hardnested/: hardnested_bruteforce.c
